Addressing pr comments, added license